tests/should_succeed/noreturn_method.jou
import "stdlib/process.jou"

class Foo:
    def stop_the_process_silently(self) -> noreturn:
        exit(0)

def main() -> int:
    f = Foo{}
    f.stop_the_process_silently()
